--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fire_mouth",
-  "title": "fire_mouth",
+  "title": "Mouth Sounds (FireFox Edition)",
   "id": "jid1-nvArAluBVSDCZQ",
   "description": "shits fire fam",
-  "author": "",
+  "author": "fire_mouth LLC",
   "license": "MPL 2.0",
   "version": "1.0",
   "icon": "./data/favicon.ico"
