illegal name fixed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fire_mouth",
-  "title": "Mouth Sounds (FireFox Edition)",
+  "title": "Mouth Sounds (Fire Version)",
   "id": "jid1-nvArAluBVSDCZQ",
   "description": "shits fire fam",
   "author": "fire_mouth LLC",
