--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fire_mouth",
   "title": "Mouth Sounds (Fire Version)",
-  "id": "jid1-nvArAluBVSDCZQ",
+  "id": "jid1-CJM5Z9or8tumYQ",
   "description": "shits fire fam",
   "author": "fire_mouth LLC",
   "license": "MPL 2.0",
